# VS_Qt_Test

./: .configure.ini  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeUserPresets.json  MNIC.vcxproj  MNIC.vcxproj.filters  MNIC_VS.wsp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  pushall.sh  read.md  src.rar  原始src.rar
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
MNIC.dir/Debug/MNIC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
MNIC_autogen/: mocs_compilation_Debug.cpp
MNIC_autogen/include_Debug/UVLADIE3JM/: moc_CentralWindow.cpp.d  moc_DlgMenuCFG.cpp.d  moc_DlgMenuFile.cpp.d  moc_MNIC.cpp.d  moc_TaskWZ.cpp.d
docs/: Technical_Documentation.md
enc_temp_folder/9483847e77c55d664610fbeb8de74a/: TaskWZ.cpp
src/: .configure.ini  CentralWindow.cpp  CentralWindow.hpp  ConfigInit.cpp  ConfigInit.hpp  DataConstruct.cpp  DataConstruct.hpp  DataFrameWz.hpp  DeviceCheckResult.cpp  DeviceCheckResult.hpp  DlgMenuCFG.cpp  DlgMenuCFG.hpp  DlgMenuFile.cpp  DlgMenuFile.hpp  FileList.cpp  FileList.hpp  FileParsing.cpp  FileParsing.hpp  FluidCtrl.cpp  FluidCtrl.hpp  GlobalConditionList.cpp  GlobalConditionList.hpp  LogProcess.cpp  LogProcess.hpp  LogWZ.cpp  LogWZ.hpp  MNIC.cpp  MNIC.h  SamplingDataGenerate.cpp  SamplingDataGenerate.hpp  SocketWZ.cpp  SocketWZ.hpp  TaskWZ.cpp  TaskWZ.hpp  TestCondition.cpp  TestCondition.hpp  ToolWZ.cpp  ToolWZ.hpp  main.cpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
